# RabbitMQ-Pika-tuts

./: .gitignore
main/: consumer.py  main.py  producer.py  pyproject.toml
main/migrations/versions/: e099d2a95959_.py
microAdmin/: consumer.py  manage.py  pyproject.toml
microAdmin/microAdmin/: asgi.py  settings.py  wsgi.py
microAdmin/products/: producer.py  views.py
microAdmin/products/migrations/: 0001_initial.py
