[tool.poetry]
name = "main"
version = "0.1.0"
description = ""
authors = ["Islom <jumaniyozovse@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.4.4"
Flask-Migrate = "^2.6.0"
Flask-Script = "^2.0.6"
Flask-Cors = "^3.0.10"
requests = "^2.25.1"
mysqlclient = "^2.0.3"
pika = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
