[tool.poetry]
name = "microadmin"
version = "0.1.0"
description = ""
authors = ["Islom <jumaniyozovse@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.5"
Django = "^3.1.6"
mysqlclient = "^2.0.3"
djangorestframework = "^3.12.2"
django-cors-headers = "^3.7.0"
pika = "^1.2.0"
django-mysql = "^3.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
